--- a/esysthesis.sty
+++ b/esysthesis.sty
@@ -242,7 +242,8 @@
 %%\includegraphics[width=15mm]{agumark.eps}
 %%{\Large \vspace*{2cm} \@nendo 年度 \hspace{0.5cm} \@thesistype} \\
 %\def\ssimb{\includegraphics[width=25mm]{agumark.eps}}
-\def\ssimb{\includegraphics[width=21mm]{CITmark.eps}}
+%\def\ssimb{\includegraphics[width=21mm]{CITmark.eps}}
+\def\ssimb{~}
 \vspace*{-15mm}
 \hspace*{-10mm}
 \begin{tabular}{lr}
