--- a/main.tex
+++ b/main.tex
@@ -89,23 +89,23 @@ urlbordercolor={0 0 1},%        url の枠の色 blue ［default］
 %  この部分を，自分（達）の情報に修正してください．
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-\jtitle{時間的非同期性を考慮した遠隔作業支援システムの提案}{-問題志向型システム(POS)をベースとしたノウハウのデータ化のためのシステムモデル-}
-\etitle{aaaaaaaaa}{}
+\jtitle{戦略的イノベーション創造プログラム（ＳＩＰ）第２期／\\ビッグデータ・ＡＩを活用したサイバー空間基盤技術／介護支援技術}{}
+\etitle{排泄センサーを基軸とした介護者支援システムの開発}{}
 
-\nendo{2018}
+\nendo{2018 ～ 2022}
 
-\thesistype{博士論文}
-\belongdept{工学研究科 工学専攻}
-\belongcourse{千葉工業大学 大学院}
+\thesistype{報告書}
+\belongdept{独立行政法人新エネルギー・産業技術総合開発機構}
+\belongcourse{~}
 
-\ebelongdept{Graduate School of Engineering, Engineering major}
-\ebelongcourse{Chiba Institute of Technology}
+\ebelongdept{（委託先）株式会社ａｂａ}
+\ebelongcourse{~}
 
-\authora{菅野~翔平}{}{Shohei~Sugano}
+\authora{第１８１０２０７０－０号}{}{}
 %
 \datestamp{2023}{3}
 %
-\headshorttitle{時間的非同期性を考慮した遠隔作業支援システムの提案}
+\headshorttitle{排泄センサーを基軸とした介護者支援システムの開発}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 絶対に読み込まなければならないスタイル
@@ -129,7 +129,7 @@ urlbordercolor={0 0 1},%        url の枠の色 blue ［default］
 % ここから下を各自の設定にあわせて変更
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-\input{main/chap_1/1_introduction}
+\input{main/1_introduction}
 % \input{main/chap_2/2_investigation}
 % \input{main/chap_3/3_development}
 % \input{main/chap_4/4_share}
