--- a/main/abstract.tex
+++ b/main/abstract.tex
@@ -1,4 +1,4 @@
 %==============================================================
-%=================  ˜_•¶—v|@i@‰pŒê@j ========================
+%=================  è«–æ–‡è¦æ—¨ã€€ï¼ˆã€€è‹±èªã€€ï¼‰ ========================
 %==============================================================
-\noindent In this research, I developed an excretion detection device using sensor technology.  
+\noindent In this research, ...
