--- a/main/appendix.tex
+++ b/main/appendix.tex
@@ -1,298 +1,6 @@
-\chapter{–{Œ¤‹†‚Ìƒf[ƒ^}\label{chap:A}
-‚±‚±‚Å‚ÍC–{Œ¤‹†‚Å‚Ì‘—¿‚ğ‹LÚ‚·‚éB
+\chapter{æœ¬ç ”ç©¶ã®ãƒ‡ãƒ¼ã‚¿}\label{chap:A}
+ã“ã“ã§ã¯ï¼Œæœ¬ç ”ç©¶ã§ã®è³‡æ–™ã‚’è¨˜è¼‰ã™ã‚‹ã€‚
 
 
-\section{ÀŒ±‚ÌÚ×‚Èè‡}\label{experiment_process}
-\begin{verbatim}
-(1) 18F30 ƒvƒƒOƒ‰ƒ€‚Ì“®ìŠm”F(ƒŠƒ‚[ƒg)‚ğs‚¤D
-(2) 19F00 ‚³‚í‚â‚©‰‘‚É“’…ŒãC‚·‚®‚ÉŸ‚Ì–€‚ğÀ{‚·‚éD
-  [1] Œ±‹@Ší‚ÌˆÈ‰º‚Ì“_ŒŸ‚ğs‚¤D
-    1.PC‚â‹@Ší‚ª“®ì‚µ‚Ä‚¢‚é‚©Šm”F(–â‘è‚ª‚ ‚ê‚ÎCslack‚Å˜A—‚·‚é‚±‚Æ)
-    2.‘Sˆõ‚Ìƒ`ƒ…[ƒu‚Ì…”²‚«
-  [2] 19F00‚Ì’è‚¨‚Ş‚ÂŒğŠ·^”íŒ±Ò‘Sˆõ‚Ì‚¨‚Ş‚Â“à‚ğŠm”F‚µCˆÈ‰º‚ğÀ{‚·‚éD
-    1.‚¨‚Ş‚Â‚ª‰˜‚ê‚Ä‚¢‚éê‡^‚¨‚Ş‚ÂŒğŠ·‚ğÀ{‚·‚éD
-    2.Še”íŒ±Ò‚Ì‚¨‚Ş‚Â‚Ì“–‚Ä•û‚ªCw¦’Ê‚è‚Ì“–‚Ä•û‚ÆˆÙ‚È‚Á‚Ä‚¢‚éê‡^w¦’Ê‚è‚Ì“–‚Ä•û‚É’¼‚·D
-    3.‚¨‚Ş‚Â‚ª‰˜‚ê‚Ä‚¢‚È‚¢ê‡^‚¨‚Ş‚Â“à‚É”rŸ••¨‚ª–³‚¢‚±‚Æ‚ğŠm”F‚µ‚ÄCÄ‚Ñ‚¨‚Ş‚Â‚ğ•Â‚¶‚éD
-  [3] ì‹ÆI—¹ŒãCuƒXƒ^ƒbƒtƒXƒe[ƒVƒ‡ƒ“‚ÌPC‚ÉŒ‹‰Ê‚ğ‹L˜^v‚·‚éD
-’ˆÓ) [2]‚Ås‚Á‚½19F00‚Ì’è‚¨‚Ş‚ÂŒğŠ·‚ÍC(3)‚Ì‚¨‚Ş‚ÂŒğŠ·‚ÉŠÜ‚Ü‚ê‚È‚¢D
-(3) ‚¨‚Ş‚ÂŒğŠ·^”rŸ•ŒŸ’mƒZƒ“ƒT‚Ì’Ê’m‚ª‚ ‚Á‚½‚çCˆÈ‰º‚ğÀ{‚·‚éD
-  [1] ”rŸ•‚Ì’Ê’m‚ª‚ ‚Á‚½‚çC‘¦À‚É”íŒ±Ò‚Ì‚¨‚Ş‚Â“à‚ğŠm”F‚·‚éD
-  [2] ”rŸ••¨‚ª‚ ‚ê‚ÎC‚¨‚Ş‚ÂŒğŠ·‚ğÀ{‚·‚éD”rŸ••¨‚ª‚È‚¯‚ê‚ÎCÄ‚Ñ‚¨‚Ş‚Â‚ğ•Â‚¶‚éD
-  [3] ”rŸ••¨‚ª‚ ‚ê‚ÎC‚»‚Ì—Ê(d‚³)‚ğ‘ª’è‚·‚é(‰˜‚ê‚½ƒIƒ€ƒcd—Ê|‚«‚ê‚¢‚ÈƒIƒ€ƒcd—Ê)
-  [4] ì‹ÆI—¹ŒãCuƒXƒ^ƒbƒtƒXƒe[ƒVƒ‡ƒ“‚ÌPC‚ÉŒ‹‰Ê‚ğ‹L˜^v‚·‚éD
-’ˆÓ) ’Ê’m‚ª‚ ‚Á‚½‚Æ‚µ‚Ä‚àC”rŸ••¨‚ª–³‚©‚Á‚½Œ‚ÍC‚¨‚Ş‚ÂŒğŠ·‚ğ‚µ‚½‚±‚Æ‚ÉŠÜ‚Ü‚ê‚È‚¢D
-(4) ’è‚Ì‘ÌˆÊŒğŠ·^‚³‚í‚â‚©‰‘‚ÅŒˆ‚ß‚ç‚ê‚½ƒ^ƒCƒ€ƒXƒPƒWƒ…[ƒ‹‚É]‚Á‚ÄCŠe”íŒ±Ò‚Ì‘ÌˆÊŒğŠ·‚ğÀ{‚·‚é
-(5) 01F00‚Ì’è‚¨‚Ş‚ÂŒğŠ·^(3)‚Ì‚¨‚Ş‚ÂŒğŠ·‚ğˆê“x‚às‚Á‚Ä‚¢‚È‚¢”íŒ±Ò‚É‘Î‚µ‚Ä‚ÍC‰º‹L‚Ì—v—Ì‚Å’è‚¨‚Ş‚ÂŒğŠ·‚ğÀ{‚·‚éD
-  [1] ‚¨‚Ş‚Â‚ª‰˜‚ê‚Ä‚¢‚éê‡^‚¨‚Ş‚ÂŒğŠ·‚ğÀ{‚µC”rŸ••¨‚Ì—Ê(d‚³)‚ğ‘ª’è‚·‚éD
-  [2] ‚¨‚Ş‚Â‚ª‰˜‚ê‚Ä‚¢‚È‚¢ê‡^‚¨‚Ş‚Â“à‚É”rŸ••¨‚ª–³‚¢‚±‚Æ‚ğŠm”F‚µ‚ÄCÄ‚Ñ‚¨‚Ş‚Â‚ğ•Â‚¶‚éD
-  [3] [1][2]‚Æ‚à‚ÉCì‹ÆI—¹ŒãCuƒXƒ^ƒbƒtƒXƒe[ƒVƒ‡ƒ“‚ÌPC‚ÉŒ‹‰Ê‚ğ‹L˜^v‚·‚éD
-  ¦ ’è‚¨‚Ş‚ÂŒğŠ·À{’†‚ÉC•Ê‚Ì”íŒ±Ò‚Å”rŸ•‚Ì’Ê’m‚ª‚ ‚Á‚½ê‡CŒ»İs‚Á‚Ä‚¢‚é‚¨‚Ş‚ÂŒğŠ·‚ªI—¹Ÿ‘æC”rŸ•‚Ì’Ê’m‚ª‚ ‚Á‚½”íŒ±Ò‚Ì‚¨‚Ş‚Â“à‚ÌŠm”F((3)‚Ìì‹Æ)‚ğ—Dæ‚µ‚Äs‚¤‚±‚Æ
-(6) (5)‚ªI—¹ŒãC(3)(4)‚ğŒp‘±‚·‚éD
-(7) 05F00 ‚Ì’è‚¨‚Ş‚ÂŒğŠ·^”íŒ±Ò‘Sˆõ‚É‘Î‚µ‚ÄC’è‚Ì‚¨‚Ş‚ÂŒğŠ·‚ğÀ{‚·‚éDì‹Æ‚Ì—v—Ì‚Í(5)‚Ì[1]`[3]‚Æ“¯‚¶‚Å‚ ‚éD
-(8) 05F30 Œ±‚ÌI—¹ì‹Æ‚ğÀ{‚·‚éD
-  [1] –{“ú‚Ì‹L˜^–€‚ª‘S‚ÄuƒXƒ^ƒbƒtƒXƒe[ƒVƒ‡ƒ“‚ÌPC‚ÉŒ‹‰Ê‚ª‹L˜^v‚³‚ê‚Ä‚¢‚é‚±‚Æ‚ğŠm”F‚µCƒtƒ@ƒCƒ‹‚ğã‘‚«•Û‘¶‚µ‚½ã‚ÅƒVƒƒƒbƒgƒ_ƒEƒ“‚·‚éD
-  [2] “ŒŠÙ3F‚ÌƒXƒ^ƒbƒtƒXƒe[ƒVƒ‡ƒ“‚É’u‚¢‚Ä‚ ‚éƒ^ƒCƒ€ƒJ[ƒh‚ğØ‚èC‚»‚Ì‚Ì‰¡‚É©•ª‚Ì–¼‘O‚ğ‹L“ü‚·‚éD
-  [3] ‚³‚í‚â‚©‰‘‚ÌEˆõ‚Ì•û‚ÉC‹A‘î‚·‚é|‚ğ“`‚¦‚Ä‚©‚çC‘ŞŠÙ‚·‚éD
-  ¦ ”íŒ±Ò‚Ìü‚è‚Éİ’u‚³‚ê‚Ä‚¢‚é”rŸ•ŒŸ’mƒZƒ“ƒT‚â‚»‚ê‚É‚Â‚È‚ª‚Á‚Ä‚¢‚éPC‚Ì“dŒ¹‚ÍC‚Â‚¯‚½‚Ü‚Ü‚ÅOK
-
-ƒXƒ^ƒbƒtƒXƒe[ƒVƒ‡ƒ“‚ÌPC‚ÉŒ‹‰Ê‚ğ‹L˜^‚·‚é“à—e(‹L˜^•\.xlsx)
-‚»‚ê‚¼‚ê‚Ì”íŒ±Ò‚É‘Î‚µ‚ÄCˆÈ‰º‚Ì–€‚ğPC‚Ìw’è‚Ìƒtƒ@ƒCƒ‹‚É‹L˜^‚·‚é
-(a) ”rŸ•‚Ì’Ê’m‚Ì‚ ‚Á‚½ŠÔEEE(3)(6)‚Ìì‹Æ
-(b) ‚¨‚Ş‚ÂŒğŠ·ì‹Æ‚ğŠJn‚µ‚½ŠÔEEE(2)(3)(5)(6)(7)‚Ìì‹Æ
-(c) ‚¨‚Ş‚ÂŒğŠ·ì‹Æ‚ªI—¹‚µ‚½ŠÔEEE(2)(3)(5)(6)(7)‚Ìì‹Æ
-(d) ‚¨‚Ş‚Â“à‚Ì”rŸ••¨‚Ìó‹µEEE(2)(3)(5)(6)(7)‚Ìì‹Æ
-  [1] ”rŸ••¨‚Ìí—Ş^”AC•ÖC”A••ÖC‚È‚µ
-  [2] ”rŸ••¨‚Ì—Ê ^‘ª’è‚µ‚½”rŸ••¨‚Ìd—Ê
-  [3] •Ö‚Ìê‡C‚»‚Ìó‘Ô^ƒuƒŠƒXƒgƒ‹ƒXƒP[ƒ‹‚É‚Ä‘I‘ğ
-(e) ‘ÌˆÊŒğŠ·‚ğs‚Á‚½ŠÔEEE(4)
-(f) ‘ÌˆÊŒğŠ·‚ÌŒü‚«^‘ÌˆÊŒğŠ·‚Ì‘O‚ÌŒü‚«¨Œã‚ÌŒü‚«EEE(4)
-(g) ‚»‚Ì‘¼C“Á•M–€(”CˆÓ)‚Æ‚»‚ê‚É‹C‚Ã‚¢‚½ŠÔ
-  —áF››‚ÉCu•Ö˜R‚ê‚ª”­¶‚µCƒV[ƒg‚ª‰˜‚ê‚½vCu‹@ŠB‚ª~‚Ü‚Á‚Ä‚¢‚½‚Ì‚É‹C‚Ã‚¢‚½vCu”íŒ±Ò‚ª—£°‚µ‚Ä‚¢‚½v‚È‚Ç
-  ¦ ŠÔ‚ÍC©•ª‚ª‚ÂƒXƒ}ƒz‚È‚ÇC“d”gŒv‚Ì‚ÅŠm”F‚·‚é‚±‚ÆD{İ‚ÌŒv‚ÍC‚¸‚ê‚Ä‚¢‚é‰Â”\«‚ ‚è
-  ¦ ƒxƒbƒhƒTƒCƒh‚Ö‹L˜^—p†‚ğ‚Á‚Äs‚«C‚Ü‚¸‚Í‚¨‚Ş‚ÂŒğŠ·‚Ìì‹Æ‚Ìê‚Åè‘‚«‚Å‹L˜^‚ğ‚Æ‚èCŠeì‹Æ‚ÌI—¹ŒãC‹ó‚¢‚½ŠÔ‚ÅƒXƒ^ƒbƒtƒXƒe[ƒVƒ‡ƒ“‚ÌPC‚ÉŒ‹‰Ê‚ğ“ü—Í‚·‚é‚±‚Æ‚ğ„§‚·‚éD
-\end{verbatim}
-
-
-\clearpage
-\section{sê•ªÍ‘—¿}\label{market_analysis}
-
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh1.eps}
-  \label{market_analysis_zu1}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh2.eps}
-  \label{market_analysis_zu2}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh3.eps}
-  \label{market_analysis_zu3}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh4.eps}
-  \label{market_analysis_zu4}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh5.eps}
-  \label{market_analysis_zu5}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh6.eps}
-  \label{market_analysis_zu6}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh7.eps}
-  \label{market_analysis_zu7}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh8.eps}
-  \label{market_analysis_zu8}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh9.eps}
-  \label{market_analysis_zu9}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh10.eps}
-  \label{market_analysis_zu10}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh11.eps}
-  \label{market_analysis_zu11}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh12.eps}
-  \label{market_analysis_zu12}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh13.eps}
-  \label{market_analysis_zu13}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh14.eps}
-  \label{market_analysis_zu14}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh15.eps}
-  \label{market_analysis_zu15}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh16.eps}
-  \label{market_analysis_zu16}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh17.eps}
-  \label{market_analysis_zu17}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh18.eps}
-  \label{market_analysis_zu18}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh19.eps}
-  \label{market_analysis_zu19}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh20.eps}
-  \label{market_analysis_zu20}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh21.eps}
-  \label{market_analysis_zu21}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh22.eps}
-  \label{market_analysis_zu22}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh23.eps}
-  \label{market_analysis_zu23}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh24.eps}
-  \label{market_analysis_zu24}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh25.eps}
-  \label{market_analysis_zu25}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh26.eps}
-  \label{market_analysis_zu26}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh27.eps}
-  \label{market_analysis_zu27}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh28.eps}
-  \label{market_analysis_zu28}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh29.eps}
-  \label{market_analysis_zu29}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh30.eps}
-  \label{market_analysis_zu30}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh31.eps}
-  \label{market_analysis_zu31}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh32.eps}
-  \label{market_analysis_zu32}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh33.eps}
-  \label{market_analysis_zu33}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh34.eps}
-  \label{market_analysis_zu34}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh35.eps}
-  \label{market_analysis_zu35}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh36.eps}
-  \label{market_analysis_zu36}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[angle=90, width=15cm]{fig/for_appendix/0701_abasê•ªÍ/ƒXƒ‰ƒCƒh37.eps}
-  \label{market_analysis_zu37}
-\end{figure}
-
-\clearpage
-\section{ƒAƒ“ƒP[ƒgŒ‹‰Ê}\label{questionnaire}
-\ref{chap:4.3}‚Ås‚Á‚½ƒAƒ“ƒP[ƒg‚ÌŒ‹‰Ê‚ğˆÈ‰º‚ÉŒfÚ‚·‚éD
-
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/1.eps}
-  \label{questionnaire_zu1}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/2.eps}
-  \label{questionnaire_zu2}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/3.eps}
-  \label{questionnaire_zu3}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/4.eps}
-  \label{questionnaire_zu4}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/5.eps}
-  \label{questionnaire_zu5}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/6.eps}
-  \label{questionnaire_zu6}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/7.eps}
-  \label{questionnaire_zu7}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/8.eps}
-  \label{questionnaire_zu8}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/9.eps}
-  \label{questionnaire_zu9}
-\end{figure}
-\begin{figure}[p]
-  \centering
-  \includegraphics[width=15cm]{fig/for_appendix/ƒAƒ“ƒP[ƒg/10.eps}
-  \label{questionnaire_zu10}
-\end{figure}
+\section{å®Ÿé¨“æ™‚ã®è©³ç´°ãªæ‰‹é †}\label{experiment_process}
+aaaa
