--- a/main/filelist.tex
+++ b/main/filelist.tex
@@ -1,45 +1,44 @@
-\section{ƒtƒ@ƒCƒ‹‰ğà}
-E-Sys—p \LaTeX2e ˜_•¶ì¬ƒ}ƒNƒEƒtƒ@ƒCƒ‹W‚ÍCTable~\ref{table:filelist}‚É¦‚·ƒtƒ@ƒCƒ‹‚©‚ç\¬‚³‚ê‚éD‚±‚ê‚ç‚Ìƒ}ƒNƒEƒtƒ@ƒCƒ‹‚Ì“KØ‚È‰ÓŠ‚ğ•ÏX‚·‚é‚ÆC˜_•¶‚Ì–{•¶ˆÈŠO‚Ì•”•ª‚ª©“®“I‚É¶¬‚³‚ê‚éD
+\section{ãƒ•ã‚¡ã‚¤ãƒ«è§£èª¬}
+E-Sysç”¨ \LaTeX2e è«–æ–‡ä½œæˆãƒã‚¯ãƒ­ãƒ»ãƒ•ã‚¡ã‚¤ãƒ«é›†ã¯ï¼ŒTable~\ref{table:filelist}ã«ç¤ºã™ãƒ•ã‚¡ã‚¤ãƒ«ã‹ã‚‰æ§‹æˆã•ã‚Œã‚‹ï¼ã“ã‚Œã‚‰ã®ãƒã‚¯ãƒ­ãƒ»ãƒ•ã‚¡ã‚¤ãƒ«ã®é©åˆ‡ãªç®‡æ‰€ã‚’å¤‰æ›´ã™ã‚‹ã¨ï¼Œè«–æ–‡ã®æœ¬æ–‡ä»¥å¤–ã®éƒ¨åˆ†ãŒè‡ªå‹•çš„ã«ç”Ÿæˆã•ã‚Œã‚‹ï¼
 
 \begin{table}[t]
 \begin{center}
-\caption{File and macro list for thesis making used in Our E-Sys labratory. Far right column shows the necessity for change of the file. A round mark (›) means that the file must be changed. A cross mark (~) means that the file must not be changed.}
+\caption{File and macro list for thesis making used in Our E-Sys labratory. Far right column shows the necessity for change of the file. A round mark (â—‹) means that the file must be changed. A cross mark (Ã—) means that the file must not be changed.}
 
 %\vspace{3mm}
 \begin{tabular}{l|l|c}\hline
 %Filename & Explanation of file & Necessity for change \\\hline\hline
 \multicolumn{1}{c|}{Filename} & \multicolumn{1}{c|}{Explanation of file} & \multicolumn{1}{c}{Necessity for change}\\ \hline\hline\hline
-main.tex & The file which becomes main & › \\\hline
-predoc.tex & A cover, acknowledgement, TOC, etc. & ~\\ 
+main.tex & The file which becomes main & â—‹ \\\hline
+predoc.tex & A cover, acknowledgement, TOC, etc. & Ã—\\ 
  & ~~~are constituted &  \\\hline
-esysthesis.sty & Style(Macro) file  & ~ \\\hline
-esyshdr.sty & Style(Macro) file & ~ \\\hline
-agumark.eps & The picture file of AGU mark & ~ \\\hline
-esysthesis.bst & BibTeX Style File & ~ \\\hline
-esysnomencl.ist & Symbol List Setting File & ~ \\\hline
-esysnomencl.sty & Symbol List Style(Macro) File & ~ \\\hline\hline
+esysthesis.sty & Style(Macro) file  & Ã— \\\hline
+esyshdr.sty & Style(Macro) file & Ã— \\\hline
+agumark.eps & The picture file of AGU mark & Ã— \\\hline
+esysthesis.bst & BibTeX Style File & Ã— \\\hline
+esysnomencl.ist & Symbol List Setting File & Ã— \\\hline
+esysnomencl.sty & Symbol List Style(Macro) File & Ã— \\\hline\hline
 
-masterzyuryouin.tex & The file for receipt stamp page file & › \\
+masterzyuryouin.tex & The file for receipt stamp page file & â—‹ \\
  & ~~~of Master Thesis &  \\\hline
-seniorzyuryouin.tex & The file for receipt stamp page file & ›\\
+seniorzyuryouin.tex & The file for receipt stamp page file & â—‹\\
  & ~~~of Graduate Thesis &  \\\hline\hline
 
-abstract.tex & Thesis summary is discrived in English & › \\\hline
-achievement.tex & Achievements are discrived & › \\\hline
-program.tex & Appendix: &  › \\
+abstract.tex & Thesis summary is discrived in English & â—‹ \\\hline
+achievement.tex & Achievements are discrived & â—‹ \\\hline
+program.tex & Appendix: &  â—‹ \\
  & Programs and data are explained &  \\\hline
-qa.tex & Appendix: & › \\
+qa.tex & Appendix: & â—‹ \\
  & Questions and answers are described &  \\\hline
-thanks.tex & Acknowledgement is filled in & › \\\hline
-youshi.tex & Thesis summary is discrived in Japansese & › \\\hline\hline
+thanks.tex & Acknowledgement is filled in & â—‹ \\\hline
+youshi.tex & Thesis summary is discrived in Japansese & â—‹ \\\hline\hline
 
-Makefile & Procedure utilized by the make command & › \\
+Makefile & Procedure utilized by the make command & â—‹ \\
  & ~~~is described &  \\\hline\hline
  
-eclbkbox.sty & This file may not exist & ~ \\\hline
-fancyvrb.sty & This file may not exist & ~ \\\hline\hline
+eclbkbox.sty & This file may not exist & Ã— \\\hline
+fancyvrb.sty & This file may not exist & Ã— \\\hline\hline
 \end{tabular} 
 \label{table:filelist}
 \end{center}
 \end{table}
-
