--- a/main/thanks.tex
+++ b/main/thanks.tex
@@ -1,6 +1,6 @@
 %==============================================================
-%========================= é”é´ ===============================
+%========================= Ë¨ùËæû ===============================
 %==============================================================
 
-aa
+aaa
 
