--- a/main/youshi.tex
+++ b/main/youshi.tex
@@ -1,5 +1,13 @@
 %==============================================================  
-%=================  ˜_•¶—vŽ|i“ú–{Œêj ========================
+%=================  è«–æ–‡è¦æ—¨ï¼ˆæ—¥æœ¬èªžï¼‰ ========================
 %==============================================================
-–{Œ¤‹†‚Å‚ÍCƒZƒ“ƒT‹Zp‚ð—p‚¢‚½”rŸ•ŒŸ’m‹@Ší‚ðŠJ”­‚µ‚½D
-Œ‹‰Ê‚Æ‚µ‚ÄC‚É‚¨‚¢ƒZƒ“ƒT‚ð—p‚¢‚½”ñ‘•’…‚©‚Â”ñNP‚ÈƒV[ƒgŒ^‚Ì”rŸ•ŒŸ’mŠí‚ðŠJ”­‚·‚é‚±‚Æ‚É¬Œ÷‚µ‚½D
+
+æœ¬ç ”ç©¶ã§ã¯ï¼Œï¼Ž\\
+çµæžœã¨ã—ã¦ï¼Œ....
+\par
+\par
+æœ¬è«–æ–‡ã§ã¯ï¼Œã¾ãšï¼Œ....
+\par
+æ¬¡ã«ï¼Œ....
+\par
+ã•ã‚‰ã«ï¼Œ....
