--- a/main/qa.tex
+++ b/main/qa.tex
@@ -1,33 +1,33 @@
 %==================================================================
-%======================== Ž¿‹^‰ž“šW ==============================
+%======================== è³ªç–‘å¿œç­”é›† ==============================
 %==================================================================
-\chapter{Ž¿‹^‰ž“šW}
-–{•t˜^‚Å‚ÍCŽÀÛ‚É˜_•¶”­•\‰ï‚É‚Äo‚³‚ê‚½Ž¿‹^‰ž“š‚ðÚ‚¹‚éD
+\chapter{è³ªç–‘å¿œç­”é›†}
+æœ¬ä»˜éŒ²ã§ã¯ï¼Œå®Ÿéš›ã«è«–æ–‡ç™ºè¡¨ä¼šã«ã¦å‡ºã•ã‚ŒãŸè³ªç–‘å¿œç­”ã‚’è¼‰ã›ã‚‹ï¼Ž
 \vspace{1cm}
 
 \begin{questions}
-\question{‰¤‹³Žö}
-{lH–³”\‚ÆlH’m”\‚Ìˆá‚¢‚ÍH}
-\answer{–{˜_•¶21ƒy[ƒWCu4.3.2 lH’m”\‚ÆlH–³”\v‚ðŽQÆ‚­‚¾‚³‚¢D}
+\question{çŽ‹æ•™æŽˆ}
+{äººå·¥ç„¡èƒ½ã¨äººå·¥çŸ¥èƒ½ã®é•ã„ã¯ï¼Ÿ}
+\answer{æœ¬è«–æ–‡21ãƒšãƒ¼ã‚¸ï¼Œã€Œ4.3.2 äººå·¥çŸ¥èƒ½ã¨äººå·¥ç„¡èƒ½ã€ã‚’å‚ç…§ãã ã•ã„ï¼Ž}
 
-%\question{Elise‹³Žöi•xŽRŒ¤j}
-%{‰½ŒÌ ƒRƒm‘ºƒjƒn ¡ ’Nƒ‚ƒCƒiƒCƒmH} 
+%\question{Eliseæ•™æŽˆï¼ˆå¯Œå±±ç ”ï¼‰}
+%{ä½•æ•… ã‚³ãƒŽæ‘ãƒ‹ãƒ ä»Š èª°ãƒ¢ã‚¤ãƒŠã‚¤ãƒŽï¼Ÿ} 
 %\answer
-%{‘´‚ê‚Í Ì ŠF Ž€‚ñ‚¶‚á‚Á‚½‚©‚ç‚³}
+%{å…¶ã‚Œã¯ æ˜” çš† æ­»ã‚“ã˜ã‚ƒã£ãŸã‹ã‚‰ã•}
 %
-%\question{Elise‹³Žöi•xŽRŒ¤j}
-%{ƒWƒƒ... ‰½ŒÌ Ì ‘ºl ŠF Ž€ƒ“ƒWƒƒƒbƒ^ƒmH} 
+%\question{Eliseæ•™æŽˆï¼ˆå¯Œå±±ç ”ï¼‰}
+%{ã‚¸ãƒ£... ä½•æ•… æ˜” æ‘äºº çš† æ­»ãƒ³ã‚¸ãƒ£ãƒƒã‚¿ãƒŽï¼Ÿ} 
 %\answer
-%{‘´‚ê‚Í •‚« Ž€‚Ì •a ‚Ì‚¹‚¢‚³}
+%{å…¶ã‚Œã¯ é»’ã æ­»ã® ç—… ã®ã›ã„ã•}
 %
-%\question{Elise‹³Žöi•xŽRŒ¤j}
-%{ƒWƒƒ... ‰½ŒÌ ƒ\ƒmXƒm ‘ºƒjƒn •êŽqƒnƒCƒ^ƒmH} 
+%\question{Eliseæ•™æŽˆï¼ˆå¯Œå±±ç ”ï¼‰}
+%{ã‚¸ãƒ£... ä½•æ•… ã‚½ãƒŽæ£®ãƒŽ æ‘ãƒ‹ãƒ æ¯å­ãƒã‚¤ã‚¿ãƒŽï¼Ÿ} 
 %\answer
-%{‘´‚ê‚Í ˆ½‚ÌyƒCƒhz‚ª ŒÄ‚ñ‚¾‚©‚ç‚³}
+%{å…¶ã‚Œã¯ æˆ–ã®ã€ã‚¤ãƒ‰ã€‘ãŒ å‘¼ã‚“ã ã‹ã‚‰ã•}
 %
-%\question{Elise‹³Žöi•xŽRŒ¤j}
-%{ƒWƒƒ... ‰½ŒÌ yƒCƒhzƒn ‰½ƒmˆ×ƒj lƒ’ŒÄƒuƒmH} 
+%\question{Eliseæ•™æŽˆï¼ˆå¯Œå±±ç ”ï¼‰}
+%{ã‚¸ãƒ£... ä½•æ•… ã€ã‚¤ãƒ‰ã€‘ãƒ ä½•ãƒŽç‚ºãƒ‹ äººãƒ²å‘¼ãƒ–ãƒŽï¼Ÿ} 
 %\answer
-%{‘´‚ê‚±‚»‚ª “z‚Ì–{”\‚¾‚©‚ç‚³}
+%{å…¶ã‚Œã“ããŒ å¥´ã®æœ¬èƒ½ã ã‹ã‚‰ã•}
 \end{questions}
 
